# skypro_test

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
sales_network/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
sales_network/migrations/: 0001_initial.py  0002_alter_supplier_debt.py
user/: admin.py  models.py  serializers.py
user/migrations/: 0001_initial.py
